syntax = "proto3";
package greeter;
import "google/protobuf/struct.proto";

// The greeting service definition.
service GreeterService {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
  google.protobuf.Struct Box = 1;
}

message HelloReply {
  string message = 1;
}
